# cli-projects

go-cli/basicserver/cmd/: main.go
go-cli/file-copier/cmd/: main.go
go-cli/file-copier/cmd/uploads/: uploaders.go
go-cli/lru-caching/: main.go
go-cli/lru-caching/cmd/: minicache.go
go-cli/ttl-cache/: .gitignore  Dockerfile  README.md  go.mod
go-cli/ttl-cache/cache/: bgeviction.go  cache.go  lru.go  services.go
go-cli/ttl-cache/cmd/: main.go
golang-cli/file-copier/: go.mod
golang-cli/file-copier/cmd/: main.go
pythoncli/: downloaders.py  pyproject.toml  requirements.txt  undo_redo_stack.py
pythoncli/autosuggestions/: debounce.py  prefixsuggest.py
