[project]
name = "pythoncli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "ffmpeg-python==0.2.0",
    "future==1.0.0",
    "idna==3.11",
    "requests==2.32.5",
    "urllib3==2.6.3",
    "yt-dlp==2025.12.8",
]
